--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
             </div>
         </div>
         <div class="footer_line"></div>
-        <div class="footer_rs">
+        <!-- <div class="footer_rs">
             <a href="" class="footer_icon-2021">
                 © 2023
             </a>
@@ -610,7 +610,7 @@
             <a href="https://github.com/Sh0k0" class="footer_icon-username" target="_blank">
                 Sh0k0
             </a>
-        </div>
+        </div> -->
     </footer>
     <!-- footer end -->
     <script src="./js/burger-menu.js"></script>
